# svve

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml
docs/arch/: blueprint.md  how-this-works.md  phase1-migration.md  theoretical_background.md
docs/ops/: queueing-and-slo.md
docs/python/: README.md  llm_injection.md  module_reference.md
docs/rust/: README.md  module_reference.md
scripts/: run-ingestion.py  run-search.py
src/: lib.rs
src/api/: search_engine.rs
src/core/: expansion.rs  pipeline.rs  voting.rs
src/math/: linalg.rs  normalize.rs  topk.rs
src/svve/: __init__.py
src/vdb/: adapter.rs  fetch.rs  query.rs
src_py/vtree_search/: __init__.py  exceptions.py  version.py
src_py/vtree_search/config/: __init__.py  models.py
src_py/vtree_search/contracts/: __init__.py  ingestion_models.py  job_models.py  search_models.py
src_py/vtree_search/ingestion/: __init__.py  annotation_client.py  docx_layout.py  ingestor.py  parser_helpers.py  pipeline.py  source_parser.py  source_types.py
src_py/vtree_search/ingestion/prompts/: __init__.py  image_prompt.py  table_prompt.py
src_py/vtree_search/llm/: __init__.py  contracts.py  langchain_ingestion.py  langchain_search.py
src_py/vtree_search/orchestration/: __init__.py  coordinator.py
src_py/vtree_search/queue/: __init__.py  redis_streams.py
src_py/vtree_search/retrieval/: __init__.py  service.py
src_py/vtree_search/runtime/: __init__.py  bridge.py
src_py/vtree_search/search/: __init__.py  engine.py
src_py/vtree_search/shared/: __init__.py  settings.py
src_rs/: lib.rs
src_rs/api/: ingestion_bridge.rs  mod.rs  search_bridge.rs
src_rs/core/: errors.rs  filter_http.rs  ingestion_pipeline.rs  mod.rs  search_pipeline.rs
src_rs/index/: mod.rs  postgres_repo.rs  sql.rs
src_rs/math/: mod.rs  score.rs
svve_core/: __init__.py  engine.py  exceptions.py  schemas.py
tests/python/: README.md  test_schemas.py
tests/rust/: README.md  main.rs
