[package]
name = "svve_core"
version = "0.1.2"
edition = "2021"
description = "Segmented Vector Voting & Expansion core library (Python-Rust hybrid)"
license = "Proprietary"

[lib]
name = "_svve_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py38"] }
numpy = "0.28.0"
rayon = "1.11.0"
memmap2 = "0.9.10"
hashbrown = "0.16.1"
ndarray = "0.17.2"
bytemuck = "1.25.0"

[dev-dependencies]
rstest = "0.26"

[[test]]
name = "rust_tests"
path = "tests/rust/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
