[package]
name = "vtree_search"
version = "1.0.0"
edition = "2021"
description = "Vtree Search core runtime (Python-Rust hybrid)"
license = "Proprietary"

[lib]
name = "_vtree_search"
path = "src_rs/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py38"] }
numpy = "0.28.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[dev-dependencies]
rstest = "0.26"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
