[project]
name = "svve-core"
version = "0.1.0"
description = "Segmented Vector Voting & Expansion"
readme = "README.md"
authors = [
    { name = "keonhok-kim", email = "keonhok0315@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
python-source = "."
module-name = "svve_core._svve_core"


[tool.pytest.ini_options]
testpaths = ["tests/python"]
env = ["PYTHONDONTWRITEBYTECODE=1"]
