[project]
name = "vtree-search"
version = "1.0.0"
description = "멀티모달 계층형 RAG 검색 엔진(Vtree Search)"
readme = "README.md"
authors = [
    { name = "keonhok-kim", email = "keonhok0315@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "redis>=5.2.1",
    "psycopg[binary]>=3.2.10",
    "pypdfium2>=4.30.0",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.7",
    "Pillow>=11.2.1",
    "boto3>=1.39.11",
    "tenacity>=9.1.2",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langchain-google-genai>=4.2.1",
    "langchain-anthropic>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "ruff>=0.15.1",
    "ty>=0.0.19",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
python-source = "src_py"
module-name = "vtree_search._vtree_search"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
env = ["PYTHONDONTWRITEBYTECODE=1"]
